Improve ant config

--- a/adapter/seajs/build.xml
+++ b/adapter/seajs/build.xml
@@ -5,16 +5,14 @@
 	</description>
 
 	<property name="version" value="4.1.3"/>
-	<property name="charset" value="utf-8"/>
 	<property name="src" value="../../"/>
 	<property name="dist" value="${version}"/>
 
 	<target name="transport">
+		<delete dir="${dist}"/>
 		<exec executable="cmd" failonerror="true">
 			<arg line="/c spm transport transport.js --force"/>
 		</exec>
-		<delete dir="${dist}/plugins"/>
-		<delete dir="${dist}/themes"/>
 		<copy todir="${dist}" includeemptydirs="false">
 			<fileset dir="${src}">
 				<include name="plugins/**"/>
